--- a/src/main/docker/dockerfile
+++ b/src/main/docker/dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:8-jdk-alpine
 VOLUME /tmp
 ADD cloud-service-merchant-bet.jar app.jar
 EXPOSE 13100
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-Dspring.profiles.active=prod","-jar","/app.jar"]
