--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -8,6 +8,10 @@ ribbon:
 spring:
   application:
     name: cloud-service-merchant-bet
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 103.84.110.202:8848
   datasource:
     #    url: jdbc:mysql://127.0.0.1:3306/spring-boot-demo?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&failOverReadOnly=false&serverTimezone=GMT%2B8
     url: jdbc:mysql://103.84.110.202:3306/cloud?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&failOverReadOnly=false&serverTimezone=GMT%2B8
