--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,10 +5,19 @@ server:
 ribbon:
   ReadTimeout: 60000
   ConnectTimeout: 60000
+#开启熔断器
+feign:
+  sentinel:
+    enabled: true
 spring:
   application:
     name: cloud-service-merchant-bet
   cloud:
+    #熔断器
+    sentinel:
+      transport:
+        port: ${server.port}
+        dashboard: 103.84.110.202:8002
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
