独立项目，不连接数据库

--- a/pom.xml
+++ b/pom.xml
@@ -41,20 +41,23 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-        <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.xinbo</groupId>
-            <artifactId>cloud-common-service</artifactId>
+            <artifactId>cloud-common-domain</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.xinbo</groupId>
+            <artifactId>cloud-common-vo</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 
     <!-- Docker maven plugin -->
