--- a/src/main/docker/dockerfile
+++ b/src/main/docker/dockerfile
@@ -1,5 +1,6 @@
 FROM openjdk:8
 VOLUME /tmp
+ADD skywalking-7.0.0.tar.gz /skywalking
 ADD cloud-service-merchant-bet.jar app.jar
 EXPOSE 13100
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-Dspring.profiles.active=prod","-Dspring.application.name=cloud-service-merchant-bet","-jar","/app.jar"]
+ENTRYPOINT ["java","-Dskywalking.agent.service_name=cloud-service-merchant-bet", "-Dskywalking.collector.backend_service=192.168.30.88:11800", "-javaagent:/skywalking/skywalking-agent.jar", "-Dorg.apache.skywalking.apm.dependencies.io.netty.noUnsafe=true", "-Djava.security.egd=file:/dev/./urandom", "-Dspring.profiles.active=prod", "-jar", "/app.jar"]
