--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>cloud-dependencis</artifactId>
+        <artifactId>cloud-dependencies</artifactId>
         <groupId>com.xinbo</groupId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../cloud-dependencies/pom.xml</relativePath>
